--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 <!-- Pie de página -->
 <footer class="footer">
     <div class="container">
-    <p>&copy; 2025 Mi Empresa. Todos los derechos reservados.</p>
+    <p>&copy; 2025 Adriel Dobal. Todos los derechos reservados.</p>
     </div>
 </footer>
 
