--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <header>
     <nav class="navbar">
     <div class="container">
-        <a href="#" class="logo">Adriel Dobal ©️</a>
+        <a href="#" class="logo">Adriel Dobal</a>
         <ul class="nav-links">
         <li><a href="#products">Productos</a></li>
         <li><a href="#add-product">Agregar</a></li>
@@ -63,7 +63,7 @@
 <!-- Pie de página -->
 <footer class="footer">
     <div class="container">
-    <p>&copy; 2025 Adriel Dobal. Todos los derechos reservados.</p>
+    <p>&copy; 2025 Adriel Dobal ©️. Todos los derechos reservados.</p>
     </div>
 </footer>
 
