--- a/index.html
+++ b/index.html
@@ -10,6 +10,14 @@
 <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
+     <main>
+        <!-- Aquí va el contenido de la demo -->
+        <h2>Datos obtenidos desde una API</h2>
+        <div id="contenido">
+            <p>Cargando datos...</p>
+        </div>
+    </main>
+</body>
 <!-- Encabezado con navegación y sección hero -->
 <header>
     <nav class="navbar">
