--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
      <main>
         <!-- Aquí va el contenido de la demo -->
-        <h2>Datos obtenidos desde una API</h2>
+        <h2>Datos obtenidos por la API</h2>
         <div id="contenido">
             <p>Cargando datos...</p>
         </div>
