--- a/index.html
+++ b/index.html
@@ -10,19 +10,20 @@
 <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
-     <main>
-        <!-- Aquí va el contenido de la demo -->
-        <h2>Datos obtenidos por la API</h2>
-        <div id="contenido">
-            <p>Cargando datos...</p>
-        </div>
-    </main>
+    <main>
+    <!-- Aquí va el contenido de la demo -->
+    <h2>Datos obtenidos por la API</h2>
+    <div id="contenido">
+        <p>Cargando datos...</p>
+    </div>
+</main>
 </body>
+
 <!-- Encabezado con navegación y sección hero -->
 <header>
     <nav class="navbar">
     <div class="container">
-        <a href="#" class="logo">Adriel Dobal</a>
+        <a href="#" class="logo">Adriel Dobal ©️</a>
         <ul class="nav-links">
         <li><a href="#products">Productos</a></li>
         <li><a href="#add-product">Agregar</a></li>
@@ -71,59 +72,12 @@
 <!-- Pie de página -->
 <footer class="footer">
     <div class="container">
-    <p>&copy; 2025 Adriel Dobal ©️. Todos los derechos reservados.</p>
+    <p>&copy; 2025 Mi Empresa. Todos los derechos reservados.</p>
     </div>
 </footer>
 
 <!-- Vinculación del JS -->
 <script src="script.js"></script>
-// Función para obtener datos desde la API JSONPlaceholder
-function obtenerDatos() {
-    fetch("https://jsonplaceholder.typicode.com/posts/1")
-        .then(response => {
-            if (!response.ok) {
-                throw new Error("Error al obtener los datos");
-            }
-            return response.json();
-        })
-        .then(data => {
-            document.getElementById("contenido").innerHTML = `
-                <div class="card">
-                    <h3>${data.title}</h3>
-                    <p>${data.body}</p>
-                </div>
-            `;
-        })
-        .catch(error => {
-            console.error("Error:", error);
-            document.getElementById("contenido").innerHTML = "<p>Error al cargar los datos.</p>";
-        });
-}
-
-// Ejecutar la función al cargar la página
-document.addEventListener("DOMContentLoaded", obtenerDatos);
-
-function obtenerDatos() {
-    fetch("https://jsonplaceholder.typicode.com/posts/1")
-        .then(response => {
-            if (!response.ok) {
-                throw new Error("Error al obtener los datos");
-            }
-            return response.json();
-        })
-        .then(data => {
-            document.getElementById("contenido").innerHTML = `
-                <div class="card">
-                    <h3>${data.title}</h3>
-                    <p>${data.body}</p>
-                </div>
-            `;
-        })
-        .catch(error => {
-            console.error("Error:", error);
-            document.getElementById("contenido").innerHTML = "<p>Error al cargar los datos.</p>";
-        });
-}
 
 // Ejecutar la función al cargar la página
 document.addEventListener("DOMContentLoaded", obtenerDatos);
@@ -152,5 +106,6 @@ function obtenerDatos() {
 
 // Ejecutar la función al cargar la página
 document.addEventListener("DOMContentLoaded", obtenerDatos);
+
 </body>
 </html>
