--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <main>
-    <!-- Aquí va el contenido de la demo -->
+    <!-- Contenido de la demo -->
     <h2>Datos obtenidos por la API</h2>
     <div id="contenido">
         <p>Cargando datos...</p>
@@ -72,7 +72,7 @@
 <!-- Pie de página -->
 <footer class="footer">
     <div class="container">
-    <p>&copy; 2025 Mi Empresa. Todos los derechos reservados.</p>
+    <p>&copy; 2025 Adriel Dobal. Todos los derechos reservados.</p>
     </div>
 </footer>
 
